# slack-twitter-bot

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.py
app/: main.py
app/api/: __init__.py  slack.py  status.py
app/core/: config.py
app/schema/: slack.py
app/services/: hashtag.py  twitter.py
